--- a/Social_Mediasapdjhwuivfbwjdk.ipynb
+++ b/Social_Mediasapdjhwuivfbwjdk.ipynb
@@ -2171,24 +2171,27 @@
       "source": [
         "model = Sequential()\n",
         "\n",
-        "# Perbaiki embedding \n",
+        "# Input layer\n",
         "model.add(Input(shape=(X_train.shape[1], )))\n",
-        "model.add(Embedding(input_dim=15000, output_dim=200, input_length=max_length))\n",
-        "model.add(Dropout(0.3))  # Kurangi dropout\n",
         "\n",
-        "# Kurangi regularisasi\n",
+        "# Embedding layer\n",
+        "model.add(Embedding(input_dim=15000, output_dim=200, input_length=max_length))\n",
+        "model.add(Dropout(0.3))  \n",
+        "\n",
+        "# Recurrent layers\n",
+        "# Bidirectional SimpleRNN layer with L2 regularization\n",
         "model.add(Bidirectional(SimpleRNN(128, activation='relu', \n",
-        "                                  kernel_regularizer=tf.keras.regularizers.l2(0.001),  # Kurangi regularisasi\n",
+        "                                  kernel_regularizer=tf.keras.regularizers.l2(0.001),\n",
         "                                  return_sequences=True)))\n",
         "model.add(Dropout(0.3))\n",
         "\n",
-        "# Kurangi jumlah layer\n",
+        "# Bidirectional SimpleRNN layer with L2 regularization\n",
         "model.add(Bidirectional(SimpleRNN(64, activation='relu', \n",
         "                                 kernel_regularizer=tf.keras.regularizers.l2(0.001),\n",
         "                                 return_sequences=False)))\n",
         "model.add(Dropout(0.3))\n",
         "\n",
-        "# Dense layers\n",
+        "# Fully connected layer\n",
         "model.add(Dense(64, activation='relu'))\n",
         "model.add(Dropout(0.3))\n",
         "\n",
